# hackathon-todo

./: CLAUDE.md  README.md  docker-compose.yml
.spec-kit/: config.yaml
backend/: .env.example  CLAUDE.md  Dockerfile  auth.py  db.py  gemini_agent.py  main.py  mcp_server.py  models.py  pyproject.toml
backend/routes/: chat.py  tasks.py
frontend/: CLAUDE.md  Dockerfile  package-lock.json  package.json  tsc_output.txt
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/[...all]/: route.ts
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: ChatInterface.tsx  TaskForm.tsx  TaskList.tsx
frontend/lib/: api.ts  auth.ts
phase1-console/: AGENTS.md  CLAUDE.md  CONSTITUTION.md  README.md  pyproject.toml
phase1-console/specs_history/: phase1-v1.md
phase1-console/src/: main.py
specs/api/: mcp-tools.md  rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  chatbot.md  task-crud.md
